Changed Enemy to an abstract class, changed the enemy subclasses to declare their own health and speed values. Also updated the update and takeDamage methods to cooperate with this change