@@ -6,18 +6,18 @@ import java.util.ArrayList;
 import java.util.List;
 
 public abstract class Enemy {
-    //private int health;
-    //private float speed;
+    private int health;
+    private float speed;
     private int x, y;// Screen pixel coordinates
     private float exactX, exactY;
     private List<Point> path;
     private int currentIndex = 0;
     private static final int TILE_SIZE = 40;
 
-    public Enemy(int startX, int startY) {
+    public Enemy(int health, float speed, int startX, int startY) {
         this.path = new ArrayList<Point>();
 
-        Point start = path.get(0);
+        Point start = path.getFirst();
         this.exactX = start.x * TILE_SIZE;
         this.exactY = start.y * TILE_SIZE;
         this.x = (int) exactX;
@@ -26,7 +26,7 @@ public abstract class Enemy {
         startY = y;
     }
 
-    public void update(float speed) {
+    public void update() {
         if (currentIndex >= path.size()) return;
 
         Point target = path.get(currentIndex);
@@ -50,11 +50,11 @@ public abstract class Enemy {
         this.y = (int) exactY;
     }
 
-    public void takeDamage(int health, int damage) {
+    public void takeDamage(int damage) {
         health -= damage;
     }
 
-    public boolean isAlive(int health) {
+    public boolean isAlive() {
         return health > 0;
     }
 
@@ -70,9 +70,13 @@ public abstract class Enemy {
         return y;
     }
 
-    abstract public int getHealth();
+    public int getHealth() {
+        return health;
+    }
 
-    abstract public float getSpeed();
+    public float getSpeed() {
+        return speed;
+    }
 
     public void draw(Graphics g) {
         g.setColor(java.awt.Color.RED);
